--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=restaurant
+RESTAURANT_USER=user
+RESTAURANT_PASSWORD=password
+RESTAURANT_DB=restaurant
