--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:13
     restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${RESTAURANT_USER}
+      - POSTGRES_PASSWORD=${RESTAURANT_PASSWORD}
+      - POSTGRES_DB=${RESTAURANT_DB}
     volumes:
       - ./migrations/restaurant.sql:/docker-entrypoint-initdb.d/restaurant.sql
       - ./migrations/inserts.sql:/docker-entrypoint-initdb.d/inserts.sql
