--- a/restaurant-ui/package.json
+++ b/restaurant-ui/package.json
@@ -41,5 +41,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.48",
     "tailwindcss": "^3.4.14"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
